@@ -1,6 +1,12 @@
 SUBDIRS = . gtk-engine gdk-pixbuf-loader doc
 
-bin_PROGRAMS = rsvg
+if HAVE_GTK
+target_rsvg_view = rsvg-view
+else
+target_rsvg_view =
+endif
+
+bin_PROGRAMS = rsvg $(target_rsvg_view)
 
 noinst_PROGRAMS = test-performance #test-display
 
@@ -18,15 +24,6 @@ if OS_WIN32
 else
 libm = -lm
 endif
-
-EXTRA_DIST =			\
-	COPYING.LIB 		\
-	librsvg.spec.in 	\
-	librsvg-2.0.pc.in 	\
-	librsvg-zip.in 		\
-	rsvg-gz.c 		\
-	rsvg-gz.h 		\
-	$(man_MANS)
 
 lib_LTLIBRARIES = librsvg-2.la
 
@@ -72,6 +69,7 @@ INCLUDES =				\
 	-I$(top_builddir) 		\
 	$(LIBRSVG_CFLAGS) 		\
 	$(GTK_CFLAGS)			\
+	$(GDK_X11_CFLAGS)		\
 	-DG_LOG_DOMAIN=\"librsvg\" 	\
 	-DDATADIR="\"$(datadir)\""
 
@@ -93,10 +91,21 @@ test_performance_LDFLAGS =
 test_performance_DEPENDENCIES = $(DEPS)
 test_performance_LDADD = $(LDADDS) $(libm)
 
-#test_display_SOURCES=test-display.c
-#test_display_LDFLAGS =
-#test_display_DEPENDENCIES = $(DEPS)
-#test_display_LDADD = $(LDADDS) $(GTK_LIBS) $(libm)
+rsvg_view_SOURCES = 		\
+	test-display.c
+rsvg_view_LDFLAGS =
+rsvg_view_DEPENDENCIES = $(DEPS)
+rsvg_view_LDADD = $(LDADDS) $(GTK_LIBS) $(GDK_X11_LIBS) $(libm)
+
+EXTRA_DIST =			\
+	COPYING.LIB 		\
+	librsvg.spec.in 	\
+	librsvg-2.0.pc.in 	\
+	librsvg-zip.in 		\
+	rsvg-gz.c 		\
+	rsvg-gz.h 		\
+	$(man_MANS)		\
+	$(rsvg_view_SOURCES)
 
 tests: rsvg
 
