@@ -203,23 +203,36 @@ else
         AC_MSG_RESULT(no)
 fi
 
+have_gtk=no
+PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12, have_gtk=yes,
+		       have_gtk=no)
+
+GTK_VERSION=
+if test "x$have_gtk" = "xyes"; then
+   GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
+fi
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+AC_SUBST(GTK_VERSION)
+AM_CONDITIONAL(HAVE_GTK, test "x$have_gtk" = "xyes")
+
+have_gdk_x11=no
+PKG_CHECK_MODULES(GDK_X11, gdk-x11-2.0 >= 2.0.0, have_gdk_x11=yes, have_gdk_x11=no)
+AC_SUBST(GDK_X11_CFLAGS)
+AC_SUBST(GDK_X11_LIBS)
+
+if test "x$have_gdk_x11" = "xyes"; then
+	AC_DEFINE(ENABLE_XEMBED, 1, [Is XEmbed available])
+fi
+
 AC_ARG_ENABLE(gtk-theme,
     [  --enable-gtk-theme  Enable a RSVG based GTK+ theme engine [default=auto]],,
     enable_gtk_theme=yes)
 
 if test "x$enable_gtk_theme" = "xyes"; then
-	GTK_VERSION=
-
-	PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12, enable_gtk_theme=yes,
-			       enable_gtk_theme=no)
-
-	if test "x$enable_gtk_theme" = "xyes"; then
-	   GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
-	fi
-
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
-AC_SUBST(GTK_VERSION)
+   if test "x$have_gtk" = "xno"; then
+      enable_gtk_theme=no;
+   fi
 fi
 
 AM_CONDITIONAL(ENABLE_GTK_ENGINE, test "x$enable_gtk_theme" = "xyes")
